feat: AI教案收敛整合至课节工作台、算力审计日志全景透视及数据库长文本安全扩容
1. 【AI 架构收敛与旧版独立教案模块下线 (AI Architecture & Lesson Plan Consolidation)】
   - 备课工作台全面收敛：彻底下线冗余且独立的旧版「AI 教案生成」模块（移除 LessonPlanController、LessonPlanService、LessonPlan.vue 等），功能全量合并至「课程大纲与课节工作台（Lesson Studio / Course AI Workbench）」
   - 菜单与权限安全迁移：新增迁移脚本 V2_6_7__remove_ai_lesson_plan.sql 彻底清理历史菜单与权限脏数据；新增 lesson-studio-entry.ts 规范化引导并移除废弃路由

2. 【AI 算力审计跨模块收敛与全景用量分析 (AI Audit API & Usage Analytics)】
   - 模块解耦与契约规范：将 AiCallLogVO、AiCallLogPageVO 规范下沉至 edu-mind-ai-api，通过 AiAuditQueryApi 为统计模块提供严谨的跨模块分页调用日志与审计数据
   - 算力大屏全景透视：前端新增 AIUsageHero.vue、AIUsageLogTable.vue、AIUsageDetailDrawer.vue，实现调用量趋势、耗时区间、Token 消耗分布与单次调用参数详情抽屉联动

3. 【数据库字段防溢出保护与记忆安全归一化 (Data Safety & Text Widening Migrations)】
   - 错题与记忆字段扩容：新增迁移脚本 V2_6_8__widen_wrong_question_diagnosis.sql（错题诊断字段扩为 TEXT）与 V2_6_9__widen_ai_memory_summary.sql（记忆摘要字段扩容），根治长文本 AI 诊断结果入库超长截断报错
   - 智能体记忆安全守卫：后端新增 MemorySummaryNormalizer.java，在入库前对智能体长期记忆摘要实施安全归一化与截断保护

4. 【教学报告全景看板与干预中心深度重构 (Teaching Report & Intervention Center)】
   - 教学报告与错题透视：新增 TeachingReportHero.vue、TeachingQuestionDetailDrawer.vue、KnowledgeMasteryHero.vue 及错题分析详情抽屉（WrongQuestionDetailDrawer.vue 等），支持题目失分率与错因多维度穿透查看
   - 教学干预业务闭环：完善 InterventionCenter.vue、useIntervention.ts 与 TeachingInterventionServiceImpl.java，支持 AI 预案生成（InterventionAiProposeDTO）与概览统计（InterventionOverviewStatsVO）
   - 单测覆盖：新增 useTeachingReport.spec.ts 测试套件并通过

5. 【通用格式化工具、KaTeX渲染与全平台组件优化 (Format Utils & UI Polish)】
   - 结构化文本解析：新增 structured-text.ts 及单元测试 structured-text.spec.ts，优化教学建议多段落分行与 KaTeX 数学公式渲染
   - 智能图标与交互打磨：新增通用组件 AiSparkleIcon.vue，深度优化通知抽屉、作业提交批改表格、智能组卷规则面板等全局交互
   - 质量守护：后端全模块编译绿灯，前端 69 个测试套件、356 项单测 100% 保持通过